# skiPay

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
main/: urls.py  views.py
main/templates/main/: base.html  main.html
main/templates/main/includes/: head.html
posts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/posts/: posts_confirm_delete.html  posts_detail.html  posts_form.html  posts_list.html  posts_my_confirm_delete.html  posts_my_detail.html  posts_my_form.html  posts_my_list.html
static/css/: sign-in.css
subscriptions/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
subscriptions/templates/subscriptions/: subscriptions_list.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
users/templates/users/: login.html  register.html  user_form.html
